Changed HTML button to input

--- a/views/landingPage/styles.css
+++ b/views/landingPage/styles.css
@@ -30,7 +30,7 @@
     float: right;
 }
 
-#signUpButton {
+#loginButton {
     background-color: #febfe8;
     font-size: 16pt;
     margin-top: 20px; 
