--- a/views/landingPage/index.html
+++ b/views/landingPage/index.html
@@ -15,12 +15,8 @@
                 H A V E N
             </text>
 
-            <button id="signUpButton">
-                SIGN UP
-            </button>
-            <button id="signUpButton">
-                    LOGIN
-            </button>
+            <input type="button" onclick="" id="signUpButton" value="SIGN UP">
+            <input type="button" onclick = "" id="loginButton" value="LOGIN">
 
         </div>
     </body>
