--- a/views/partials/header-chatbot.ejs
+++ b/views/partials/header-chatbot.ejs
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet"  href="/../public/styles/jquery.convform.css">
+	<link rel="stylesheet" type="text/css" href="dist/jquery.convform.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="/../public/styles/chatbot.css">
+	<link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
