--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,1 +1,18 @@
-<h1>Hello</h1>
+<% include partials/header.ejs %>
+
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1>Welcome Back!</h1>
+            <p>
+              This is your personalized Dashboard. From the Dashboard you are able to track your progress and assess your ability to
+              safely talk to someone in need.
+            </p>
+            <p>
+                <a class="btn btn-primary btn-large" href="/chatbot">Go to Chatbot</a>
+            </p>
+        </div>
+    </header>
+</div>
+
+<% include partials/footer.ejs %>
