--- a/views/login.html
+++ b/views/login.html
@@ -16,7 +16,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         		</button>
-  			<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> iGallery</a>
+  			<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-certificate" aria-hidden="true"></span> BrighterConvos</a>
   		</div>
   	 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   		<div class="nav navbar-nav">
