--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,18 +22,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         		</button>
-  			<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> iGallery</a>
+  			<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-certificate" aria-hidden="true"></span> BrighterConvos</a>
   		</div>
   	 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   		<div class="nav navbar-nav">
   			<li><a href="/">Home</a></li>
   			<li><a href="/resources">Resources</a></li>
   		</div>
-  		<ul class="nav navbar-nav navbar-right"> 
-  			<li><a href="/login">Login</a></li>
-  		</ul>
   	</div>
   	</div>
-
   	</nav>
-  </div>
