--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -32,8 +32,8 @@
 		</nav>
 	<section id="demo">
 	    <div class="vertical-align">
-	        <div class="container">
-	            <div class="row">
+	        <div class="container" style="margin-top:65px;">
+	            <div class="row" style="margin-top:20	px;">
 	                <div class="col-sm-6 col-sm-offset-3 col-xs-offset-0">
 	                    <div class="card no-border">
 	                        <div id="chat" class="conv-form-wrapper">
