--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -19,123 +19,122 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-						</button>
+				</button>
 				<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-certificate" aria-hidden="true"></span> BrighterConvos</a>
 			</div>
-		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<div class="nav navbar-nav">
-				<li><a href="/">Home</a></li>
-				<li><a href="/resources">Resources</a></li>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="nav navbar-nav">
+					<li><a href="/">Home</a></li>
+					<li><a href="/resources">Resources</a></li>
+				</div>
 			</div>
 		</div>
-		</div>
-		</nav>
+	</nav>
 	<section id="demo">
-	    <div class="vertical-align">
-	        <div class="container" style="margin-top:65px;">
-	            <div class="row" style="margin-top:20	px;">
-	                <div class="col-sm-6 col-sm-offset-3 col-xs-offset-0">
-	                    <div class="card no-border">
-	                        <div id="chat" class="conv-form-wrapper">
-	                            <form action="" method="GET" class="hidden">
-	                                <input type="text" name="name" data-conv-question="Alright! First, tell me your full name, please.|Okay! Please, tell me your name first.">
-	                            </form>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
+		<div class="vertical-align">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3 col-xs-offset-0">
+						<div class="card no-border">
+							<div id="chat" class="conv-form-wrapper">
+								<form action="" method="GET" class="hidden">
+									<input type="text" name="name" data-conv-question="Hey, I have been feeling a little bit off lately and wanted to talk to you, do you think now is a good time?">
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<script type="text/javascript" src="jquery-1.12.3.min.js"></script>
 	<script type="text/javascript" src="dist/autosize.min.js"></script>
 	<script type="text/javascript" src="dist/jquery.convform.js"></script>
 
 	<script>
-		function google() {
-			window.open("https://google.com");
-		}
-		function bing() {
-			window.open("https://bing.com");
-		}
-		var rollbackTo = false;
-		var originalState = false;
-		function storeState(stateWrapper) {
-			rollbackTo = stateWrapper.current;
-			console.log("storeState called: ",rollbackTo);
-		}
-		function rollback(stateWrapper) {
-			console.log("rollback called: ", rollbackTo, originalState);
-			console.log("answers at the time of user input: ", stateWrapper.answers);
-			if(rollbackTo!=false) {
-				if(originalState==false) {
-					originalState = stateWrapper.current.next;
-						console.log('stored original state');
-				}
-				stateWrapper.current.next = rollbackTo;
-				console.log('changed current.next to rollbackTo');
+	function google() {
+		window.open("https://google.com");
+	}
+	function bing() {
+		window.open("https://bing.com");
+	}
+	var rollbackTo = false;
+	var originalState = false;
+	function storeState(stateWrapper) {
+		rollbackTo = stateWrapper.current;
+		console.log("storeState called: ",rollbackTo);
+	}
+	function rollback(stateWrapper) {
+		console.log("rollback called: ", rollbackTo, originalState);
+		console.log("answers at the time of user input: ", stateWrapper.answers);
+		if(rollbackTo!=false) {
+			if(originalState==false) {
+				originalState = stateWrapper.current.next;
+				console.log('stored original state');
 			}
+			stateWrapper.current.next = rollbackTo;
+			console.log('changed current.next to rollbackTo');
 		}
-		function restore(stateWrapper) {
-			if(originalState != false) {
-				stateWrapper.current.next = originalState;
-				console.log('changed current.next to originalState');
-			}
+	}
+	function restore(stateWrapper) {
+		if(originalState != false) {
+			stateWrapper.current.next = originalState;
+			console.log('changed current.next to originalState');
 		}
+	}
 	</script>
 	<script>
-		jQuery(function($){
-			var count = 0;
-			var points = new Array();
-			var convForm = $('#chat').convform({eventList:{onInputSubmit: function(convState, ready) {
-				//here you send the response to your API, get the results and build the next question
-				//when ready, call 'ready' callback (passed as the second parameter)
-						if(convState.current.answer.value==='end') {
-								convState.current.next = false;
+	jQuery(function($){
+		var count = 0;
+		var points = new Array();
+		var convForm = $('#chat').convform({eventList:{onInputSubmit: function(convState, ready) {
+			//here you send the response to your API, get the results and build the next question
+			//when ready, call 'ready' callback (passed as the second parameter)
+			if(convState.current.answer.value==='end') {
+				convState.current.next = false;
+				//emulating random response time (100-600ms)
+				setTimeout(ready, Math.random()*500+100);
+			} else {
+				sendUserInput(convState.current.answer.text, count, points, function(o) {
+					convState.current.next = convState.newState({
+						type: 'input',
+						name: 'dynamic-question-'+count,
+						questions: [String(o.textOutput) + "<br> Sentiment Value:" + String(o.bestFitGradient)]
+					});
+					points = o.points;
 					//emulating random response time (100-600ms)
 					setTimeout(ready, Math.random()*500+100);
-				} else {
-					sendUserInput(convState.current.answer.text, count, points, function(o) {
-						convState.current.next = convState.newState({
-							type: 'input',
-							name: 'dynamic-question-'+count,
-							questions: [o.textOutput]
-						});
-						points = o.points;
-						//emulating random response time (100-600ms)
-						setTimeout(ready, Math.random()*500+100);
-					});
-				}
-				count++;
-			}}});
-		});
-		</script>
-		<script>
-		function sendUserInput(input, count, points, cb) {
-			// parse input into JSON
-			var inputData = {
-				text: input,
-				messageIndex: count,
-				previousPoints: points
+				});
 			}
-
-			$.ajax({
-				type: "POST",
-				// url: "https://lumohackswatson.herokuapp.com/chatbot",
-				url: "http://localhost:8080/chatbot",
-				data: JSON.stringify(inputData),
-				contentType: "application/json; charset=utf-8",
-				dataType: "json",
-				success: function(data){
-					console.log(data);
-					cb(data);
-				},
-				failure: function(errMsg) {
-					alert(errMsg);
-					console.log(errMsg);
-				}
-			});
+			count++;
+		}}});
+	});
+	</script>
+	<script>
+	function sendUserInput(input, count, points, cb) {
+		// parse input into JSON
+		var inputData = {
+			text: input,
+			messageIndex: count,
+			previousPoints: points
 		}
-		</script>
-	</body>
-	</html>
+
+		$.ajax({
+			type: "POST",
+			url: "https://lumohackswatson.herokuapp.com/chatbot",
+			data: JSON.stringify(inputData),
+			contentType: "application/json; charset=utf-8",
+			dataType: "json",
+			success: function(data){
+				console.log(data);
+				cb(data);
+			},
+			failure: function(errMsg) {
+				alert(errMsg);
+				console.log(errMsg);
+			}
+		});
+	}
+	</script>
+</body>
+</html>
