--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -25,7 +25,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<div class="nav navbar-nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="/resources">Resources</a></li>
+					<li><a href="/chatbot">Chatbot</a></li>
 				</div>
 			</div>
 		</div>
